# picus

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md
crates/picus/: Cargo.toml
crates/picus/src/: lib.rs
crates/picus/tests/: ui.rs
crates/picus/tests/ui/: no_internal_action_handlers.rs  no_internal_action_handlers.stderr  no_root_application_types.rs  no_root_application_types.stderr  runtime_only_ok.rs  ui_view_ok.rs
crates/picus_activation/: Cargo.toml
crates/picus_activation/src/: lib.rs
crates/picus_core/: AGENTS.md  Cargo.toml
crates/picus_core/src/: accelerator.rs  accessibility.rs  app_ext.rs  backdrop.rs  bevy_tween.rs  clipboard.rs  composition.rs  drag_drop.rs  ecs.rs  events.rs  fonts.rs  icon.rs  icons.rs  lib.rs  overlay.rs  perf.rs  plugin.rs  projection.rs  runner.rs  runtime.rs  scene.rs  styling.rs  synthesize.rs  templates.rs  test_helpers.rs  tests.rs  titlebar_system.rs  validation.rs  widget_actions.rs
crates/picus_core/src/components/: avatar.rs  badge.rs  breadcrumb.rs  button.rs  canvas.rs  card.rs  checkbox.rs  color_picker.rs  combo_box.rs  content_shell.rs  context_menu.rs  data_table.rs  date_picker.rs  dialog.rs  divider.rs  expander.rs  form_row.rs  grid.rs  group_box.rs  image.rs  link.rs  list_view.rs  markdown.rs  menu.rs  message_bar.rs  mod.rs  multiline_text_input.rs  navigation_view.rs  numeric_up_down.rs  password_input.rs  popover.rs  radio_group.rs  rating.rs  scroll_view.rs  search.rs  slider.rs  split_pane.rs  streaming_markdown.rs  switch.rs  tab_bar.rs  (+10 more)
crates/picus_core/src/projection/: core.rs  dialog.rs  dropdown.rs  elements.rs  layout.rs  markdown.rs  overlay.rs  popover.rs  theme_picker.rs  utils.rs  widgets.rs
crates/picus_core/src/retained_bridge/: button_with_child_view.rs  component_views.rs  mod.rs
crates/picus_core/src/retained_widgets/: action_button_widget.rs  action_button_with_child_widget.rs
crates/picus_core/src/runtime/: frame_driver.rs  layers.rs  mod.rs
crates/picus_core/src/theme/: fluent_theme.ron
crates/picus_core/src/views/: button_view.rs  button_with_child_view.rs  component_views.rs  drag_thumb_view.rs  ecs_button_view.rs  ecs_component_views.rs  ecs_drag_thumb_view.rs  mod.rs  scroll_portal_view.rs
crates/picus_core/src/widgets/: action_button_widget.rs  action_button_with_child_widget.rs  drag_thumb_widget.rs  ecs_button_widget.rs  ecs_button_with_child_widget.rs  ecs_drag_thumb_widget.rs  entity_scope_widget.rs  hit_transparent_widget.rs  mod.rs  opaque_hitbox_widget.rs
crates/picus_macros/: Cargo.toml
crates/picus_macros/src/: lib.rs
crates/picus_masonry/: Cargo.toml
crates/picus_masonry/src/: lib.rs
crates/picus_surface/: Cargo.toml
crates/picus_surface/src/: lib.rs  win32_create_window_hook.rs
crates/picus_ui_runtime/: Cargo.toml
crates/picus_ui_runtime/src/: lib.rs
crates/picus_ui_runtime/src/layers/: mod.rs
crates/picus_ui_runtime/src/widgets/: align.rs  badge.rs  button.rs  canvas.rs  divider.rs  flex.rs  image.rs  label.rs  mod.rs  portal.rs  progress_bar.rs  prose.rs  radio_button.rs  sized_box.rs  step_input.rs  text_input.rs  zstack.rs
crates/picus_view/: Cargo.toml
crates/picus_view/src/: any_view.rs  lib.rs  masonry_root.rs  one_of.rs  pod.rs  style.rs  view_ctx.rs  widget_view.rs
crates/picus_view/src/view/: mod.rs
crates/picus_view/src/views/: badge.rs  badged.rs  button.rs  canvas.rs  checkbox.rs  divider.rs  flex.rs  grid.rs  icon.rs  image.rs  label.rs  mod.rs  portal.rs  progress_bar.rs  prop.rs  prose.rs  radio_button.rs  radio_group.rs  sized_box.rs  slider.rs  spinner.rs  split.rs  switch.rs  task.rs  text_input.rs  transform.rs  virtual_scroll.rs  zstack.rs
crates/picus_widget/: Cargo.toml
crates/picus_widget/src/: paint_isolation.rs  theme.rs
crates/picus_widget/src/layers/: mod.rs  tooltip.rs
crates/picus_widget/src/properties/: checkmark.rs  content_color.rs  gap.rs  line_breaking.rs  mod.rs  object_fit.rs  placeholder_color.rs  portal.rs  progress_bar.rs  scroll_bar.rs  selection.rs  slider.rs  step_input.rs
crates/picus_widget/src/widgets/: align.rs  animated_f32.rs  badge.rs  badged.rs  button.rs  canvas.rs  checkbox.rs  divider.rs  flex.rs  grid.rs  image.rs  label.rs  mod.rs  passthrough.rs  portal.rs  progress_bar.rs  prose.rs  radio_button.rs  radio_group.rs  scroll_bar.rs  sized_box.rs  (+9 more)
crates/xilem_masonry/: Cargo.toml
crates/xilem_masonry/src/: lib.rs
docs/: README.md
docs/architecture/: crates.md  input-ime-hit.md  overview.md  projection.md  runtime.md
docs/contributing/: codewhale-submodule.md
docs/examples/: index.md
docs/guide/: app.md  components-bsn.md  events-messages.md  macros.md  markdown-streaming.md  paint-isolation.md  styling-themes.md  testing.md
docs/perf/: frame-pipeline-baseline.md
docs/plans/: app-dx.md  frame-pipeline.md  gallery-winui-coverage.md
docs/reference/: public-modules.md  style-tokens.md
docs/superpowers/plans/: 2026-06-01-crate-split.md
docs/superpowers/specs/: 2026-06-01-crate-split-design.md
examples/async_downloader/: Cargo.toml
examples/async_downloader/src/: main.rs
examples/calculator/: Cargo.toml
examples/calculator/src/: main.rs
examples/chess_game/: Cargo.toml
examples/chess_game/src/: main.rs
examples/gallery/: Cargo.toml
examples/gallery/src/: events.rs  helpers.rs  main.rs  state.rs  views.rs
examples/game_2048/: Cargo.toml
examples/game_2048/src/: main.rs
examples/overlay_hit_routing/: Cargo.toml
examples/overlay_hit_routing/src/: main.rs
examples/picuscode/: Cargo.toml
examples/picuscode/src/: action.rs  bridge.rs  main.rs  settings.rs  state.rs  ui.rs
examples/pixcus/: Cargo.toml
examples/pixcus/src/: app.rs
examples/pixcus/src/app/: activation.rs  bootstrap.rs  persistence.rs  ui.rs
examples/shared_utils/: Cargo.toml
examples/shared_utils/src/: lib.rs
examples/timer/: Cargo.toml
examples/timer/src/: main.rs
examples/todo_list/: Cargo.toml
examples/todo_list/src/: main.rs
examples/ui_showcase/: Cargo.toml
examples/ui_showcase/src/: main.rs
memories/repo/: runtime-migration.md
(+38 files in other folders)
