[workspace]
resolver = "2"
members = [
	"crates/picus_surface",
	"crates/picus_activation",
	"crates/picus_core",
	"crates/picus_widget",
	"crates/picus_masonry",
	"crates/picus_view",
	"examples/async_downloader",
	"examples/calculator",
	"examples/chess_game",
	"examples/game_2048",
	"examples/gallery",
	"examples/overlay_hit_routing",
	"examples/pixcus",
	"examples/shared_utils",
	"examples/timer",
	"examples/todo_list",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bevy_a11y = { version = "=0.19.0-rc.2", default-features = false }
bevy_app = { version = "=0.19.0-rc.2", default-features = false, features = ["std"] }
bevy_asset = { version = "=0.19.0-rc.2", default-features = false }
bevy_ecs = { version = "=0.19.0-rc.2", default-features = false, features = ["std"] }
bevy_input = { version = "=0.19.0-rc.2", default-features = false, features = ["std", "mouse", "keyboard"] }
bevy_math = { version = "=0.19.0-rc.2", default-features = false, features = ["std"] }
bevy_image = { version = "=0.19.0-rc.2", default-features = false }
bevy_text = { version = "=0.19.0-rc.2", default-features = false }
bevy_tasks = { version = "=0.19.0-rc.2", default-features = false, features = ["multi_threaded"] }
bevy_time = { version = "=0.19.0-rc.2", default-features = false, features = ["std"] }
bevy_window = { version = "=0.19.0-rc.2", default-features = false, features = ["std"] }
bevy_winit = { version = "=0.19.0-rc.2", default-features = false }
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
tokio = { version = "1.52", features = ["rt-multi-thread"] }
num-traits = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "form", "rustls"] }
rfd = "0.17"
fluent = "0.17"
unic-langid = { version = "0.9", features = ["macros"] }
masonry_core = { git = "https://github.com/linebender/xilem.git", rev = "72c6517ad035f352c70f939f4754a3f79fca23fd" }
masonry_imaging = { git = "https://github.com/linebender/xilem.git", rev = "72c6517ad035f352c70f939f4754a3f79fca23fd", features = ["imaging_vello"] }
masonry_winit = { git = "https://github.com/linebender/xilem.git", rev = "72c6517ad035f352c70f939f4754a3f79fca23fd" }
xilem_core = { git = "https://github.com/linebender/xilem.git", rev = "72c6517ad035f352c70f939f4754a3f79fca23fd" }
picus_view = { path = "crates/picus_view" }
vello = { version = "0.8.0", default-features = false, features = ["wgpu"] }
wgpu = "28.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bevy_reflect = { version = "=0.19.0-rc.2", default-features = false }
serde = { version = "1", features = ["derive"] }
ron = "0.12"
lucide-icons = "1.16.0"
app-single-instance = "0.1.0"
ipc-channel = "0.22.0"
pollster = "0.4"
plist = "1.9"
block2 = "0.6.2"
objc2 = { version = "0.6.4", default-features = false, features = ["std"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "block2", "NSWorkspace"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSBundle", "NSError", "NSObject", "NSString", "NSURL"] }
winreg = "0.56"
anyhow = "1"
arboard = "3"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
image = { version = "0.25", default-features = true }
md5 = "0.8"
serde_json = "1"
sha2 = "0.11"
webbrowser = "1"

picus_core = { path = "crates/picus_core" }
picus_widget = { path = "crates/picus_widget" }
picus_activation = { path = "crates/picus_activation" }
picus_surface = { path = "crates/picus_surface" }
shared_utils = { path = "examples/shared_utils" }

[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
nonstandard_macro_braces = "warn"
print_stdout = "warn"
print_stderr = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
too_long_first_doc_paragraph = "allow"
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"
