[workspace]
resolver = "2"
members = [
	"crates/picus",
	"crates/picus_surface",
	"crates/picus_core",
	"crates/picus_widget",
	"crates/picus_view",
	"examples/async_downloader",
	"examples/calculator",
	"examples/chess_game",
	"examples/game_2048",
	"examples/gallery",
	"examples/overlay_hit_routing",
	"examples/picuscode",
	"examples/shared_utils",
	"examples/timer",
	"examples/todo_list",
	# CodeWhale fork crates embedded by example_picuscode. They are path deps
	# and picus workspace members so their `*.workspace = true` inheritance
	# resolves against this root; see `workspace.dependencies` below for the
	# shared dep versions, which are kept compatible with the fork's own
	# `thirdparty/CodeWhale/Cargo.toml` workspace manifest.
	"thirdparty/CodeWhale/crates/protocol",
	"thirdparty/CodeWhale/crates/secrets",
	"thirdparty/CodeWhale/crates/execpolicy",
	"thirdparty/CodeWhale/crates/config",
	"thirdparty/CodeWhale/crates/agent",
	"thirdparty/CodeWhale/crates/state",
	"thirdparty/CodeWhale/crates/tools",
	"thirdparty/CodeWhale/crates/mcp",
	"thirdparty/CodeWhale/crates/hooks",
	"thirdparty/CodeWhale/crates/core",
]
exclude = [
	# The fork's own workspace root is kept for standalone maintenance, but
	# its crate members are claimed by the picus workspace above, so exclude
	# the fork root to avoid a dual-membership conflict.
	"thirdparty/CodeWhale",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AnomalyCo/picus"
rust-version = "1.88"

[workspace.dependencies]
bevy_a11y = { version = "=0.19.0", default-features = false }
bevy_app = { version = "=0.19.0", default-features = false, features = ["std"] }
bevy_asset = { version = "=0.19.0", default-features = false }
bevy_ecs = { version = "=0.19.0", default-features = false, features = ["std"] }
bevy_input = { version = "=0.19.0", default-features = false, features = ["std", "mouse", "keyboard"] }
bevy_math = { version = "=0.19.0", default-features = false, features = ["std"] }
bevy_image = { version = "=0.19.0", default-features = false }
bevy_text = { version = "=0.19.0", default-features = false }
bevy_tasks = { version = "=0.19.0", default-features = false, features = ["multi_threaded"] }
bevy_time = { version = "=0.19.0", default-features = false, features = ["std"] }
bevy_window = { version = "=0.19.0", default-features = false, features = ["std"] }
bevy_winit = { version = "=0.19.0", default-features = false }
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
smallvec = "1.15.2"
accesskit = "0.24.1"
num-traits = "0.2"
rfd = "0.17"
fluent = "0.17"
unic-langid = { version = "0.9", features = ["macros"] }
masonry_core = { git = "https://github.com/linebender/xilem.git", rev = "4b1922c9728f7b86642b6759c6608f32e0badec2" }
masonry_imaging = { git = "https://github.com/linebender/xilem.git", rev = "4b1922c9728f7b86642b6759c6608f32e0badec2", features = ["imaging_vello"] }
masonry_winit = { git = "https://github.com/linebender/xilem.git", rev = "4b1922c9728f7b86642b6759c6608f32e0badec2" }
xilem_core = { git = "https://github.com/linebender/xilem.git", rev = "4b1922c9728f7b86642b6759c6608f32e0badec2" }
picus_widget = { path = "crates/picus_widget" }
picus_view = { path = "crates/picus_view" }
vello = { version = "0.8.0", default-features = false, features = ["wgpu"] }
wgpu = "28.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bevy_reflect = { version = "=0.19.0", default-features = false }
bevy_scene = { version = "=0.19.0", default-features = false }
serde = { version = "1", features = ["derive"] }
ron = "0.12"

pollster = "0.4"
anyhow = "1"
arboard = "3"
base64 = "0.22"
image = { version = "0.25", default-features = true }
md5 = "0.8"
serde_json = "1"
sha2 = "0.11"
uuid = { version = "1.11", features = ["v4"] }
webbrowser = "1"
pulldown-cmark = { version = "0.13", default-features = false }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }

# Shared dep versions for the embedded CodeWhale fork crates. Kept aligned
# with `thirdparty/CodeWhale/Cargo.toml` so the fork can still build
# standalone against the same versions.
async-trait = "0.1.89"
dirs = "6.0.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
semver = "1.0.28"
thiserror = "2.0"
tempfile = "3.27"
toml = "1.0.6"
toml_edit = "0.25.12"
libc = "0.2"
tracing-appender = "0.2"
keyring = "3"
# chrono: unify picus (clock) and codewhale (serde) features.
chrono = { version = "0.4.43", default-features = false, features = ["clock", "serde"] }
# tokio: codewhale needs `full`; picus only needed rt-multi-thread (subset).
tokio = { version = "1.50.0", features = ["full"] }
# reqwest: unify picus + codewhale feature sets and add `stream` for SSE
# streaming of chat-completion deltas in example_picuscode.
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json", "form", "rustls", "stream", "socks"] }
raw-window-handle = "0.6.2"
windows-sys = "0.61.2"
minhook = "0.9"

picus_core = { path = "crates/picus_core" }
picus = { path = "crates/picus" }
picus_surface = { path = "crates/picus_surface" }
shared_utils = { path = "examples/shared_utils" }

# CodeWhale fork (thirdparty) — embedded in-process by example_picuscode.
# These crates remain members of thirdparty/CodeWhale's own workspace, so
# their internal `.workspace = true` deps resolve there; picus only references
# them by path. Config/state persistence shares `~/.codewhale/` with an
# installed codewhale binary, keeping config compatibility.
codewhale-protocol = { path = "thirdparty/CodeWhale/crates/protocol" }
codewhale-secrets = { path = "thirdparty/CodeWhale/crates/secrets" }
codewhale-execpolicy = { path = "thirdparty/CodeWhale/crates/execpolicy" }
codewhale-config = { path = "thirdparty/CodeWhale/crates/config" }
codewhale-agent = { path = "thirdparty/CodeWhale/crates/agent" }
codewhale-state = { path = "thirdparty/CodeWhale/crates/state" }
codewhale-tools = { path = "thirdparty/CodeWhale/crates/tools" }
codewhale-mcp = { path = "thirdparty/CodeWhale/crates/mcp" }
codewhale-hooks = { path = "thirdparty/CodeWhale/crates/hooks" }
codewhale-core = { path = "thirdparty/CodeWhale/crates/core" }

# Used by example_picuscode for SSE streaming of chat-completion deltas.
futures = "0.3"
async-stream = "0.3"

[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
nonstandard_macro_braces = "warn"
print_stdout = "warn"
print_stderr = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
too_long_first_doc_paragraph = "allow"
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"
