[package]
name = "picus_activation"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "picus_activation"
path = "src/lib.rs"

[dependencies]
app-single-instance.workspace = true
ipc-channel.workspace = true
serde.workspace = true
plist = "1.9"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = { version = "0.6.4", default-features = false, features = ["std"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "block2", "NSWorkspace"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSBundle", "NSError", "NSObject", "NSString", "NSURL"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
