[package]
name = "picus_core"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "../../README.md"
autoexamples = false

[dependencies]
accesskit.workspace = true
arboard.workspace = true
bevy_a11y.workspace = true
bevy_app.workspace = true
bevy_asset.workspace = true
bevy_ecs.workspace = true
bevy_input.workspace = true
bevy_math.workspace = true
bevy_reflect.workspace = true
bevy_scene.workspace = true
bevy_text.workspace = true
bevy_tasks.workspace = true
bevy_time.workspace = true
bevy_window.workspace = true
bevy_winit.workspace = true
picus_surface.workspace = true
crossbeam-queue.workspace = true
fluent.workspace = true
masonry_core.workspace = true
masonry_imaging.workspace = true
masonry_winit.workspace = true
rfd.workspace = true
tokio.workspace = true
unic-langid.workspace = true
xilem_core.workspace = true
picus_view.workspace = true
tracing.workspace = true
serde.workspace = true
ron.workspace = true
lucide-icons.workspace = true
wgpu.workspace = true
image.workspace = true
pulldown-cmark.workspace = true
syntect.workspace = true

[dev-dependencies]
num-traits.workspace = true
reqwest.workspace = true
tracing-subscriber.workspace = true
