[package]
name = "picus_surface"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy_window.workspace = true
masonry_imaging.workspace = true
pollster.workspace = true
tracing.workspace = true
wgpu.workspace = true

[target.'cfg(windows)'.dependencies]
raw-window-handle.workspace = true
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }
