[package]
name = "picus_surface"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy_window.workspace = true
masonry_imaging.workspace = true
pollster.workspace = true
tracing.workspace = true
wgpu.workspace = true

[target.'cfg(windows)'.dependencies]
minhook.workspace = true
raw-window-handle.workspace = true
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
] }
