[package]
name = "picus_ui_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
test = false
doctest = false

[dependencies]
accesskit = "0.24.0"
include_doc_path = { git = "https://github.com/linebender/xilem.git", rev = "72c6517ad035f352c70f939f4754a3f79fca23fd", package = "linebender_include_doc_path" }
masonry_core.workspace = true
smallvec = "1.15.1"
tracing = "0.1"
