[package]
name = "picus_view"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
picus_widget.workspace = true
xilem_core.workspace = true
smallvec.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "time", "sync"] }
tracing.workspace = true
