[package]
name = "example_pixcus"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "pixcus"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
base64.workspace = true
bevy_asset.workspace = true
bevy_ecs.workspace = true
bevy_image.workspace = true
bevy_text.workspace = true
picus_activation.workspace = true
picus_core.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
image.workspace = true
md5.workspace = true
lucide-icons.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
unic-langid.workspace = true
vello.workspace = true
webbrowser.workspace = true
shared_utils.workspace = true
