[package]
name = "example_ui_showcase"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
picus_core.workspace = true
bevy_ecs.workspace = true
shared_utils.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unic-langid.workspace = true
